--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -27,4 +27,4 @@ jobs:
         run: ./gradlew lintKotlin
 
       - name: execute gradle build
-        run: ./gradlew build
+        run: ./gradlew clean build
