--- a/src/main/resources/config/switch.yml
+++ b/src/main/resources/config/switch.yml
@@ -4,4 +4,4 @@ springy:
     baseApplicationRunner: false
     application-context: false
     config-properties: false
-    data: false
+    data: true
